discussion/kv_engine/178979/178979_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add FollyConnection

Change-Id: Icdd99a859d0c47c5aece4e4df94fd9a4759b61d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-18 11:53:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-18 12:07:32.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19574/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/connection_folly.h b/daemon/connection_folly.h
index b62a39683..4b379682c 100644
--- a/daemon/connection_folly.h
+++ b/daemon/connection_folly.h
@@ -30,7 +30,7 @@ public:
                     FrontEndThread&amp; thr,
                     std::shared_ptr&lt;ListeningPort&gt; descr,
                     uniqueSslPtr sslStructure);
-    ~FollyConnection();
+    ~FollyConnection() override;
     void copyToOutputStream(std::string_view data) override;
     void copyToOutputStream(gsl::span&lt;std::string_view&gt; data) override;
     void chainDataToOutputStream(std::unique_ptr&lt;SendBuffer&gt; buffer) override;
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19574/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:33:5: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    ~FollyConnection();
    ^
                       override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:33:23: note: FIX-IT applied suggested code changes
    ~FollyConnection();
                      ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/connection_folly.h b/daemon/connection_folly.h
index b62a39683..4b379682c 100644
--- a/daemon/connection_folly.h
+++ b/daemon/connection_folly.h
@@ -30,7 +30,7 @@ public:
                     FrontEndThread&amp; thr,
                     std::shared_ptr&lt;ListeningPort&gt; descr,
                     uniqueSslPtr sslStructure);
-    ~FollyConnection();
+    ~FollyConnection() override;
     void copyToOutputStream(std::string_view data) override;
     void copyToOutputStream(gsl::span&lt;std::string_view&gt; data) override;
     void chainDataToOutputStream(std::unique_ptr&lt;SendBuffer&gt; buffer) override;
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48485/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\daemon\connection_folly.h(27): error C2011: "FollyConnection": "class" type redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48485/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9268/ : FAILURE

Compile error at [2022-08-18T11:55:41.451Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:97:20:
error: field type "FuzzConnection" is an abstract class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20779/ : FAILURE

Compile error at [2022-08-18T12:00:04.116Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/connection_folly.h:27:7:
error: redefinition of "FollyConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20779/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9367/ : FAILURE

Compile error at [2022-08-18T12:02:45.607Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/daemon/connection_folly.h:27:7:
error: redefinition of ?class FollyConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9367/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21515/ : FAILURE

Compile error at [2022-08-18T11:58:18.116Z] ../kv_engine/tests/mcbp/mock_connection.h:57:10:
error: ?void MockConnection::executeCommandPipeline()? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21869/ : FAILURE

Compile error at [2022-08-18T11:59:59.410Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/connection_folly.h:27:7:
error: redefinition of ?class FollyConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29897/ : FAILURE

Compile error at [2022-08-18T11:59:54.613Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/connection_folly.h:27:7:
error: redefinition of "FollyConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29897/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22592/ : FAILURE

Compile error at [2022-08-18T11:56:08.445Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/connection_folly.h:27:7:
error: redefinition of "FollyConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22592/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18786/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40742/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
